Fix for Edge and IE 400 Webservice error.  URI encode webservice cutoffs parameters.  Disable "Download SVG" link if not supported.

--- a/WebRoot/css/global.css
+++ b/WebRoot/css/global.css
@@ -112,6 +112,8 @@ input[type="button"]:disabled, input[type="submit"]:disabled, .disabled-checkbox
 /* input[type="button"] */
 .submit-button:disabled { opacity:0.6;filter:alpha(opacity=60); }
 
+.download-svg-link-non-link  { opacity:0.6;filter:alpha(opacity=60); }
+
 .structure-link-non-link  { opacity:0.6;filter:alpha(opacity=60); }
 
 
